# bdr_projet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  main.cpp
gui/: CMakeLists.txt  datamanager.cpp  datamanager.h  form.h  mainwindow.cpp  mainwindow.h  utils.cpp  utils.h
init/: 01-init.sql
lib/: CMakeLists.txt
models/: CMakeLists.txt  building.cpp  building.h  company.cpp  company.h  feetype.cpp  feetype.h  flat.cpp  flat.h  heatmonthlycoef.cpp  heatmonthlycoef.h  invoice.cpp  invoice.h  occtenant.cpp  occtenant.h  occupancy.cpp  occupancy.h  payment.cpp  payment.h  paymenttype.cpp  paymenttype.h  roomtype.cpp  roomtype.h  roomtypeflat.cpp  roomtypeflat.h  tenant.cpp  tenant.h  watermeasurement.cpp  watermeasurement.h  watermeter.cpp  watermeter.h  watermeterflat.cpp  watermeterflat.h  waterprice.cpp  waterprice.h
orm/: CMakeLists.txt  column.h  columntype.cpp  columntype.h  db.cpp  db.h  miscrequest.cpp  miscrequest.h  model.h  modelregistry.cpp  modelregistry.h
